[package]
name = "Journalisation_serveur"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
url = "2"





